<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DB8A8"
    tools:context=".CrearActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="289dp"
        android:layout_height="47dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="133dp"
        android:text="@string/txt1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="Ingrese Color"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="167dp"
        android:onClick="add"
        android:text="@string/adda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcolor" />

    <Button
        android:id="@+id/btnmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="418dp"
        android:layout_marginEnd="268dp"
        android:onClick="cargapantallaregresarmenu"
        android:text="@string/btnmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcolor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="384dp"
        android:layout_height="70dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="179dp"
        android:text="@string/TEXTO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>